@@ -28,13 +28,10 @@ public class Jackson {
         return initObjectMapper(new ObjectMapper());
     }
 
-    public static ObjectMapper initObjectMapperWithSnake(ObjectMapper objectMapper) {
-        return initObjectMapper(objectMapper.setPropertyNamingStrategy(PropertyNamingStrategy.SNAKE_CASE));
-    }
-
     public static ObjectMapper initObjectMapper(ObjectMapper objectMapper) {
         objectMapper.registerModule(new GraphHopperModule());
         objectMapper.registerModule(new JtsModule());
+        objectMapper.setPropertyNamingStrategy(PropertyNamingStrategy.SNAKE_CASE);
         objectMapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
         return objectMapper;
     }
